# claude-discord-bot

./: .gitignore  Cargo.toml  README.md  flake.nix  service.nix
.github/workflows/: nix_ci.yml  release.yml  rust_ci.yml
src/: arg_parse.rs  discord.rs  main.rs
src/claude/: client.rs  consts.rs  mod.rs  model.rs  request.rs  response.rs  system_prompt.rs  tools.rs
src/claude/conversation/: content.rs  message.rs  mod.rs  role.rs  tests.rs
src/claude/message/: content.rs  message.rs  mod.rs  role.rs
src/claude/tools/: mod.rs  result.rs  tool_use.rs
src/database/: client.rs  mod.rs  record.rs
src/discord/: client.rs  command.rs  error_reply.rs  event_handler.rs  message.rs  message_context.rs  mod.rs
src/discord/event_handler/: message_handler.rs  mod.rs
src/discord/event_handlers/: mod.rs
src/discord/event_handlers/message/: action.rs  handler.rs  message_context.rs  mod.rs  response_intent.rs
