[package]
name = "claude-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
const_format = "0.2.34"
itertools = "0.14.0"
log = "0.4.27"
poise = "0.6.1"
rand = "0.9.2"
redb = "2.6.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
